# CV-AutoInfantry

AprilTag-Detection/: Astar.cpp  Astar.h  CMakeLists.txt  main.cpp
AprilTag-Detection/StereoMV/src/: MindVision.cpp
AprilTag-Detection/config/: MV-SUA133GC-0-0.Config  MV-SUA133GC-0-1.Config  config-0.yml  config-1.yml
